fix(navbar): restore search bar on smaller screens (#202)

--- a/src/theme/Navbar/styles.module.scss
+++ b/src/theme/Navbar/styles.module.scss
@@ -209,16 +209,6 @@
   }
 }
 
-@media (max-width: 996px) {
-  .benchmarkButton,
-  :global(
-      .navbar__items--right .navbar__item.header-github-link .navbar-siderbar
-    ),
-  .searchBar {
-    display: none;
-  }
-}
-
 @media (min-width: 997px) {
   .navbar {
     top: 24px;
